--- a/NAMESPACE
+++ b/NAMESPACE
@@ -100,6 +100,7 @@ exportMethods(html)
 exportMethods(kwic)
 exportMethods(kwicMetadata)
 exportMethods(kwicNo)
+exportMethods(label)
 exportMethods(left)
 exportMethods(length)
 exportMethods(ll)
@@ -113,6 +114,7 @@ exportMethods(name)
 exportMethods(names)
 exportMethods(nchars)
 exportMethods(ngrams)
+exportMethods(noise)
 exportMethods(nrow)
 exportMethods(pAttribute)
 exportMethods(pAttributes)
@@ -141,7 +143,6 @@ exportMethods(view)
 exportMethods(weigh)
 import(data.table)
 import(methods)
-importClassesFrom(quanteda,dfmSparse)
 importClassesFrom(rJava,jobjRef)
 importFrom(DT,datatable)
 importFrom(DT,formatStyle)
@@ -155,9 +156,6 @@ importFrom(magrittr,"%>%")
 importFrom(parallel,mccollect)
 importFrom(parallel,mclapply)
 importFrom(parallel,mcparallel)
-importFrom(plyr,ddply)
-importFrom(plyr,join)
-importFrom(plyr,llply)
 importFrom(rcqp,cqi_attribute_size)
 importFrom(rcqp,cqi_attributes)
 importFrom(rcqp,cqi_cpos2id)
