--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ exportClasses(ngrams)
 exportClasses(partition)
 exportClasses(partitionBundle)
 exportClasses(session)
+exportClasses(tempcorpus)
 exportClasses(textstat)
 exportMethods("+")
 exportMethods("[")
@@ -37,10 +38,9 @@ exportMethods("cores<-")
 exportMethods("corpus<-")
 exportMethods("email<-")
 exportMethods("filterType<-")
-exportMethods("kwicMetadata<-")
 exportMethods("kwicNo<-")
 exportMethods("left<-")
-exportMethods("metadata<-")
+exportMethods("meta<-")
 exportMethods("minFrequency<-")
 exportMethods("minSignificance<-")
 exportMethods("multicore<-")
@@ -98,7 +98,6 @@ exportMethods(head)
 exportMethods(hist)
 exportMethods(html)
 exportMethods(kwic)
-exportMethods(kwicMetadata)
 exportMethods(kwicNo)
 exportMethods(label)
 exportMethods(left)
@@ -106,7 +105,6 @@ exportMethods(length)
 exportMethods(ll)
 exportMethods(merge)
 exportMethods(meta)
-exportMethods(metadata)
 exportMethods(minFrequency)
 exportMethods(minSignificance)
 exportMethods(multicore)
