--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: polmineR
 Type: Package
 Title: polmineR
-Version: 0.5.35
-Date: 2016-03-10
+Version: 0.5.37
+Date: 2016-03-14
 Author: Andreas Blaette
 Maintainer: Andreas Blaette <andreas.blaette@uni-due.de>
 Imports:
@@ -43,7 +43,6 @@ License: CC BY-NC-SA 4.0 | file LICENSE
 Collate:
     'TermDocumentMatrix_methods.R'
     'adjustEncoding_method.R'
-    'as.dfm_method.R'
     'generics.R'
     'textstat_class.R'
     'bundle_class.R'
@@ -51,20 +50,22 @@ Collate:
     'polmineR_package.R'
     'partition_class.R'
     'partitionBundle_class.R'
+    'as.DocumentTermMatrix_method.R'
+    'as.dfm_method.R'
     'as.mallet_method.R'
     'as.markdown_method.R'
+    'comp_class.R'
+    'context_class.R'
+    'contextBundle_class.R'
+    'cooccurrences_class.R'
+    'as.sparseMatrix_method.R'
     'as.speeches_method.R'
     'as.svmlight_method.R'
     'blapply_method.R'
-    'comp_class.R'
-    'context_class.R'
     'kwic_class.R'
     'browse_method.R'
     'bughunt_method.R'
     'chisquare_method.R'
-    'contextBundle_class.R'
-    'cooccurrences_class.R'
-    'coerce_methods.R'
     'comparables_method.R'
     'ngrams_method.R'
     'compare_method.R'
