--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(parseInfoFile)
 export(parseRegistry)
 export(partitionBundle)
 export(partitionGadget)
+export(polmineR)
 export(punctuation)
 export(readRegistry)
 export(resetRegistry)
