shiny app with dispersion

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -46,12 +46,10 @@ Collate:
     'generics.R'
     'textstat_class.R'
     'bundle_class.R'
-    'session_class.R'
     'polmineR_package.R'
     'partition_class.R'
     'partitionBundle_class.R'
     'as.DocumentTermMatrix_method.R'
-    'as.mallet_method.R'
     'as.markdown_method.R'
     'comp_class.R'
     'context_class.R'
@@ -74,6 +72,7 @@ Collate:
     'cooccurrencesReshaped_methods.R'
     'cooccurrences_method.R'
     'cooccurrences_methods.R'
+    'corpus_method.R'
     'dispersion_class.R'
     'count_method.R'
     'tempcorpus.R'
@@ -110,14 +109,11 @@ Collate:
     'partitionBundle_methods.R'
     'sAttributes2cpos_method.R'
     'partition_method.R'
-    'store_method.R'
-    'session_methods.R'
     'partition_methods.R'
     'plot_method.R'
     'pmi_method.R'
     'read_method.R'
     'registry.R'
-    'restore_method.R'
     'rustyard.R'
     'sAttributes_method.R'
     'scatterplot_method.R'
