--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: polmineR
 Type: Package
 Title: Toolset for Corpus Analysis
-Version: 0.5.54
-Date: 2016-06-14
+Version: 0.6.0
+Date: 2016-06-22
 Author: Andreas Blaette
 Maintainer: Andreas Blaette <andreas.blaette@uni-due.de>
 Imports:
-    methods,
     rcqp,
+    methods,
+    R6,
     data.table,
     slam,
     Matrix,
@@ -28,10 +29,8 @@ Suggests:
     bigtabulate,
     shiny,
     miniUI,
-    doSNOW,
     rJava
-Remotes: github::cran/rcqp
-    github::PolMine/polmineR.sampleCorpus
+Additional_repositories: https://polmine.github.io/drat/
 VignetteBuilder: knitr
 LazyData: yes
 Description: Tools for corpus analysis using the CWB as an efficient backend.
@@ -39,8 +38,14 @@ Description: Tools for corpus analysis using the CWB as an efficient backend.
     carry out and basic statistical operations. Beyond that, it is intended to
     serve as an interface to packages implementing advanced statistical
     procedures.
+BugReports: https://github.com/PolMine/polmineR/issues
 License: GPL-3
+URL: https://www.github.com/PolMine/polmineR
 Collate:
+    'CQI.R'
+    'CQI.cqpserver.R'
+    'CQI.perl.R'
+    'CQI.rcqp.R'
     'TermDocumentMatrix_methods.R'
     'adjustEncoding_method.R'
     'generics.R'
@@ -75,7 +80,6 @@ Collate:
     'count_method.R'
     'tempcorpus.R'
     'cpos_method.R'
-    'cqi_interface.R'
     'hits_class.R'
     'dispersion_method.R'
     'dispersion_methods.R'
@@ -119,4 +123,5 @@ Collate:
     'utils.R'
     'view_method.R'
     'weigh_method.R'
+    'zzz.R'
 RoxygenNote: 5.0.1
