--- a/NAMESPACE
+++ b/NAMESPACE
@@ -113,8 +113,15 @@ importFrom(Matrix,colSums)
 importFrom(Matrix,rowSums)
 importFrom(Matrix,sparseMatrix)
 importFrom(R6,R6Class)
-importFrom(foreach,"%do%")
 importFrom(foreach,"%dopar%")
+importFrom(foreach,foreach)
+importFrom(graphics,dotchart)
+importFrom(graphics,grid)
+importFrom(graphics,par)
+importFrom(graphics,plot)
+importFrom(graphics,points)
+importFrom(graphics,rect)
+importFrom(graphics,text)
 importFrom(parallel,mccollect)
 importFrom(parallel,mclapply)
 importFrom(parallel,mcparallel)
@@ -140,9 +147,20 @@ importFrom(slam,as.simple_triplet_matrix)
 importFrom(slam,col_sums)
 importFrom(slam,row_sums)
 importFrom(slam,simple_triplet_matrix)
+importFrom(stats,formula)
+importFrom(stats,ftable)
+importFrom(stats,setNames)
+importFrom(stats,xtabs)
 importFrom(tm,DocumentTermMatrix)
 importFrom(tm,TermDocumentMatrix)
 importFrom(tm,as.DocumentTermMatrix)
 importFrom(tm,as.TermDocumentMatrix)
 importFrom(tm,nDocs)
 importFrom(tm,stopwords)
+importFrom(utils,View)
+importFrom(utils,browseURL)
+importFrom(utils,download.file)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,txtProgressBar)
+importFrom(utils,untar)
+importFrom(utils,write.csv)
