--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(as.cqp)
 export(cooccurrences)
 export(datesPeriod)
 export(flatten)
+export(is.cqp)
 export(parseInfoFile)
 export(parseRegistry)
 export(partitionBundle)
