--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,6 +44,7 @@ License: GPL-3
 URL: https://www.github.com/PolMine/polmineR
 Collate:
     'CQI.R'
+    'CQI.Rcpp.R'
     'CQI.cqpserver.R'
     'CQI.perl.R'
     'CQI.rcqp.R'
@@ -51,16 +52,16 @@ Collate:
     'adjustEncoding_method.R'
     'generics.R'
     'textstat_class.R'
-    'bundle_class.R'
     'polmineR_package.R'
     'partition_class.R'
+    'bundle_class.R'
     'partitionBundle_class.R'
     'as.DocumentTermMatrix_method.R'
     'as.markdown_method.R'
     'comp_class.R'
     'context_class.R'
-    'contextBundle_class.R'
     'cooccurrences_class.R'
+    'contextBundle_class.R'
     'as.sparseMatrix_method.R'
     'as.speeches_method.R'
     'blapply_method.R'
@@ -83,6 +84,7 @@ Collate:
     'hits_class.R'
     'dispersion_method.R'
     'dispersion_methods.R'
+    'divide_method.R'
     'dotplot_method.R'
     'encoding_method.R'
     'enrich_method.R'
