--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,12 +14,14 @@ export(is.cqp)
 export(parseInfoFile)
 export(parseRegistry)
 export(partitionBundle)
+export(partitionGadget)
 export(polmineR)
 export(punctuation)
 export(readRegistry)
 export(resetRegistry)
 export(startServer)
 export(use)
+exportClasses(Corpus)
 exportClasses(Regions)
 exportClasses(TokenStream)
 exportClasses(bundle)
