--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -120,6 +120,8 @@ Collate:
     'rustyard.R'
     'sAttributes_method.R'
     'scatterplot_method.R'
+    'shinyGadgets.R'
+    'shiny_helper_functions.R'
     'size_method.R'
     'tTest.R'
     'templates_method.R'
@@ -129,6 +131,5 @@ Collate:
     'utils.R'
     'view_method.R'
     'weigh_method.R'
-    'shiny_helper_functions.R'
     'zzz.R'
 RoxygenNote: 5.0.1
