--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(as.cqp)
 export(cooccurrences)
 export(flatten)
 export(getObjects)
+export(getSlot)
 export(is.cqp)
 export(parseInfoFile)
 export(parseRegistry)
@@ -85,6 +86,7 @@ exportMethods(html)
 exportMethods(kwic)
 exportMethods(length)
 exportMethods(ll)
+exportMethods(mail)
 exportMethods(merge)
 exportMethods(meta)
 exportMethods(name)
