--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: polmineR
 Type: Package
 Title: Toolset for Corpus Analysis
-Version: 0.6.3.9005
-Date: 2016-11-08
+Version: 0.6.3.9008
+Date: 2017-01-20
 Author: Andreas Blaette
 Maintainer: Andreas Blaette <andreas.blaette@uni-due.de>
 Imports:
@@ -130,5 +130,7 @@ Collate:
     'utils.R'
     'view_method.R'
     'weigh_method.R'
+    'Partition.R'
+    'Textstat.R'
     'zzz.R'
 RoxygenNote: 5.0.1
