--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,17 +7,15 @@ export(CQI.cqpserver)
 export(CQI.perl)
 export(CQI.rcqp)
 export(Corpus)
+export(RegistryFile)
 export(as.cqp)
 export(cooccurrences)
 export(flatten)
 export(getObjects)
 export(getSlot)
 export(is.cqp)
-export(parseInfoFile)
-export(parseRegistry)
 export(partitionBundle)
 export(punctuation)
-export(readRegistry)
 export(resetRegistry)
 export(setTemplate)
 export(startServer)
