--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(cooccurrences)
 export(flatten)
 export(getObjects)
 export(getSlot)
+export(install.corpus)
 export(is.cqp)
 export(partitionBundle)
 export(punctuation)
