--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,12 +22,12 @@ export(use)
 exportClasses(Regions)
 exportClasses(TokenStream)
 exportClasses(bundle)
-exportClasses(comp)
-exportClasses(compCooccurrences)
-exportClasses(compNgrams)
 exportClasses(context)
 exportClasses(cooccurrences)
 exportClasses(dispersion)
+exportClasses(features)
+exportClasses(featuresCooccurrences)
+exportClasses(featuresNgrams)
 exportClasses(hits)
 exportClasses(kwic)
 exportClasses(ngrams)
@@ -57,7 +57,6 @@ exportMethods(blapply)
 exportMethods(browse)
 exportMethods(chisquare)
 exportMethods(colnames)
-exportMethods(compare)
 exportMethods(context)
 exportMethods(cooccurrences)
 exportMethods(corpus)
@@ -72,6 +71,7 @@ exportMethods(dotplot)
 exportMethods(encode)
 exportMethods(encoding)
 exportMethods(enrich)
+exportMethods(features)
 exportMethods(freq)
 exportMethods(frequencies)
 exportMethods(getEncoding)
@@ -145,8 +145,12 @@ importFrom(tm,as.TermDocumentMatrix)
 importFrom(tm,nDocs)
 importFrom(tm,stopwords)
 importFrom(utils,View)
+importFrom(utils,available.packages)
 importFrom(utils,browseURL)
+importFrom(utils,contrib.url)
 importFrom(utils,download.file)
+importFrom(utils,install.packages)
+importFrom(utils,installed.packages)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
 importFrom(utils,untar)
