--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(.importPolMineCorpus)
 export(CQI)
+export(CQI.Rcpp)
 export(CQI.cqpserver)
 export(CQI.perl)
 export(CQI.rcqp)
@@ -16,6 +17,7 @@ export(install.corpus)
 export(is.cqp)
 export(partitionBundle)
 export(punctuation)
+export(resetInterface)
 export(resetRegistry)
 export(startServer)
 export(use)
