--- a/NAMESPACE
+++ b/NAMESPACE
@@ -153,6 +153,7 @@ importFrom(utils,contrib.url)
 importFrom(utils,download.file)
 importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
+importFrom(utils,localeToCharset)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
 importFrom(utils,untar)
