--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: polmineR
 Type: Package
 Title: Toolkit for Corpus Analysis
-Version: 0.7.2.9001
-Date: 2017-03-23
+Version: 0.7.2.9002
+Date: 2017-03-30
 Author: Andreas Blaette
 Maintainer: Andreas Blaette <andreas.blaette@uni-due.de>
 Imports:
@@ -37,10 +37,10 @@ Description: Library for corpus analysis using the Corpus Workbench as an
     efficient back end for indexing and querying large corpora. The package offers
     functionality to flexibly create partitions and to carry out basic statistical
     operations (count, co-occurrences etc.). The original full text of documents
-    can be reconstructed and inspected at any time. Beyond that, the package
-    is intended to serve as an interface to packages implementing advanced
-    statistical procedures. Respective data structures (document term matrices, term
-    co-occurrence matrices etc.) can be created based on the indexed corpora.
+    can be reconstructed and inspected at any time. Beyond that, the package is
+    intended to serve as an interface to packages implementing advanced statistical
+    procedures. Respective data structures (document term matrices, term co-
+    occurrence matrices etc.) can be created based on the indexed corpora.
 BugReports: https://github.com/PolMine/polmineR/issues
 License: GPL-3
 URL: https://www.github.com/PolMine/polmineR
@@ -104,6 +104,7 @@ Collate:
     'html_method.R'
     'html_methods.R'
     'install.corpus_function.R'
+    'label_method.R'
     'll_method.R'
     'mail_method.R'
     'means_method.R'
@@ -114,11 +115,11 @@ Collate:
     'partitionBundle_methods.R'
     'sAttributes2cpos_method.R'
     'partition_method.R'
-    'partition_methods.R'
     'plot_method.R'
     'pmi_method.R'
     'read_method.R'
     'registry.R'
+    'reindex_method.R'
     'rustyard.R'
     'sAttributes_method.R'
     'scatterplot_method.R'
