rework of sAttributes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ exportClasses(TokenStream)
 exportClasses(bundle)
 exportClasses(context)
 exportClasses(cooccurrences)
+exportClasses(cooccurrencesBundle)
 exportClasses(dispersion)
 exportClasses(features)
 exportClasses(featuresCooccurrences)
@@ -88,7 +89,6 @@ exportMethods(length)
 exportMethods(ll)
 exportMethods(mail)
 exportMethods(merge)
-exportMethods(meta)
 exportMethods(name)
 exportMethods(names)
 exportMethods(ngrams)
@@ -122,6 +122,7 @@ importFrom(Matrix,colSums)
 importFrom(Matrix,rowSums)
 importFrom(Matrix,sparseMatrix)
 importFrom(R6,R6Class)
+importFrom(data.table,copy)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(graphics,dotchart)
