shiny app integrated

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(getSlot)
 export(install.corpus)
 export(is.cqp)
 export(partitionBundle)
+export(polmineR)
 export(punctuation)
 export(resetRegistry)
 export(startServer)
