--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(getObjects)
 export(getSlot)
 export(install.corpus)
 export(is.cqp)
+export(packaged.corpora)
 export(partitionBundle)
 export(polmineR)
 export(punctuation)
