--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ exportMethods(as.bundle)
 exportMethods(as.data.frame)
 exportMethods(as.data.table)
 exportMethods(as.markdown)
+exportMethods(as.matrix)
 exportMethods(as.partitionBundle)
 exportMethods(as.sparseMatrix)
 exportMethods(as.speeches)
