--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,12 +78,12 @@ exportMethods(encoding)
 exportMethods(enrich)
 exportMethods(features)
 exportMethods(freq)
-exportMethods(frequencies)
 exportMethods(getEncoding)
 exportMethods(getTemplate)
 exportMethods(getTerms)
 exportMethods(getTokenStream)
 exportMethods(head)
+exportMethods(highlight)
 exportMethods(hist)
 exportMethods(hits)
 exportMethods(html)
@@ -91,6 +91,7 @@ exportMethods(kwic)
 exportMethods(length)
 exportMethods(ll)
 exportMethods(mail)
+exportMethods(matches)
 exportMethods(merge)
 exportMethods(name)
 exportMethods(names)
