as.TermDocumentMatrix,context-method introduced

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -88,6 +88,7 @@ exportMethods(hist)
 exportMethods(hits)
 exportMethods(html)
 exportMethods(kwic)
+exportMethods(label)
 exportMethods(length)
 exportMethods(ll)
 exportMethods(mail)
@@ -156,6 +157,7 @@ importFrom(utils,download.file)
 importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
 importFrom(utils,localeToCharset)
+importFrom(utils,menu)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
 importFrom(utils,untar)
