--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ exportMethods("names<-")
 exportMethods(aggregate)
 exportMethods(as.DocumentTermMatrix)
 exportMethods(as.TermDocumentMatrix)
+exportMethods(as.VCorpus)
 exportMethods(as.bundle)
 exportMethods(as.data.frame)
 exportMethods(as.data.table)
@@ -147,6 +148,7 @@ importFrom(tm,DocumentTermMatrix)
 importFrom(tm,TermDocumentMatrix)
 importFrom(tm,as.DocumentTermMatrix)
 importFrom(tm,as.TermDocumentMatrix)
+importFrom(tm,as.VCorpus)
 importFrom(tm,nDocs)
 importFrom(tm,stopwords)
 importFrom(utils,View)
