--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -69,6 +69,7 @@ Collate:
     'context_class.R'
     'partitionBundle_class.R'
     'as.DocumentTermMatrix_method.R'
+    'as.VCorpus_method.R'
     'as.markdown_method.R'
     'contextBundle_class.R'
     'cooccurrences_class.R'
