--- a/NAMESPACE
+++ b/NAMESPACE
@@ -136,6 +136,7 @@ importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(graphics,rect)
 importFrom(graphics,text)
+importFrom(jsonlite,fromJSON)
 importFrom(slam,as.simple_triplet_matrix)
 importFrom(slam,col_sums)
 importFrom(slam,row_sums)
@@ -160,6 +161,7 @@ importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
 importFrom(utils,localeToCharset)
 importFrom(utils,menu)
+importFrom(utils,packageVersion)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
 importFrom(utils,untar)
