--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(as.cqp)
 export(as.nativeEnc)
 export(as.utf8)
 export(cooccurrences)
+export(copy.corpus)
 export(flatten)
 export(getObjects)
 export(getSlot)
@@ -22,10 +23,11 @@ export(packaged.corpora)
 export(partitionBundle)
 export(polmineR)
 export(punctuation)
+export(remove.corpus)
+export(rename.corpus)
 export(resetRegistry)
 export(startServer)
 export(use)
-exportClasses(Regions)
 exportClasses(TokenStream)
 exportClasses(bundle)
 exportClasses(context)
@@ -40,6 +42,7 @@ exportClasses(kwic)
 exportClasses(ngrams)
 exportClasses(partition)
 exportClasses(partitionBundle)
+exportClasses(regions)
 exportClasses(tempcorpus)
 exportClasses(textstat)
 exportMethods("+")
