--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,3 +1,8 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
-^polmineR.graph.Rproj
+^polmineR.Rproj
+^CONDUCT\.md$
+^README\.Rmd$
+^README-.*\.png$
+^paper\.Rmd$
+.travis.yml$
