--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ addons:
     - libssl-dev
     - libcurl4-openssl-dev
 
+r_github_packages:
+  - PolMine/polmineR.Rcpp
+
 r_packages:
   - RUnit
   - devtools
