--- a/NAMESPACE
+++ b/NAMESPACE
@@ -141,6 +141,7 @@ importFrom(graphics,points)
 importFrom(graphics,rect)
 importFrom(graphics,text)
 importFrom(jsonlite,fromJSON)
+importFrom(pbapply,pblapply)
 importFrom(slam,as.simple_triplet_matrix)
 importFrom(slam,col_sums)
 importFrom(slam,row_sums)
