--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,6 +3,7 @@ Type: Package
 Title: Toolkit for Corpus Analysis
 Version: 0.7.5
 Date: 2017-10-02
+Authors@R: c(person("Andreas Blaette", "Developer", role = c("aut", "cre"), email = "andreas.blaette@uni-due.de"))
 Author: Andreas Blaette
 Maintainer: Andreas Blaette <andreas.blaette@uni-due.de>
 Imports:
