before creating doc website

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -97,7 +97,7 @@ exportMethods(label)
 exportMethods(length)
 exportMethods(ll)
 exportMethods(mail)
-exportMethods(matches)
+exportMethods(matching)
 exportMethods(merge)
 exportMethods(name)
 exportMethods(names)
