--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ addons:
     - libglib2.0-dev
     - libssl-dev
     - libcurl4-openssl-dev
+    - libxml2-dev
+    - default-jdk
 
 before_install:
   - sudo ./inst/sh/install_cwb.sh
