--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ exportClasses(bundle)
 exportClasses(context)
 exportClasses(cooccurrences)
 exportClasses(cooccurrencesBundle)
+exportClasses(count)
 exportClasses(dispersion)
 exportClasses(features)
 exportClasses(featuresCooccurrences)
