--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(is.cqp)
 export(packaged.corpora)
 export(partitionBundle)
 export(polmineR)
+export(print.html)
 export(punctuation)
 export(remove.corpus)
 export(rename.corpus)
