--- a/NAMESPACE
+++ b/NAMESPACE
@@ -122,6 +122,7 @@ exportMethods(subset)
 exportMethods(summary)
 exportMethods(tail)
 exportMethods(terms)
+exportMethods(tooltips)
 exportMethods(trim)
 exportMethods(view)
 exportMethods(weigh)
@@ -151,6 +152,7 @@ importFrom(stats,formula)
 importFrom(stats,ftable)
 importFrom(stats,setNames)
 importFrom(stats,xtabs)
+importFrom(stringi,stri_extract_all_boundaries)
 importFrom(tm,DocumentTermMatrix)
 importFrom(tm,TermDocumentMatrix)
 importFrom(tm,as.DocumentTermMatrix)
@@ -172,3 +174,10 @@ importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
 importFrom(utils,untar)
 importFrom(utils,write.csv)
+importFrom(xml2,"xml_attr<-")
+importFrom(xml2,read_html)
+importFrom(xml2,xml_attr)
+importFrom(xml2,xml_find_all)
+importFrom(xml2,xml_name)
+importFrom(xml2,xml_parent)
+importFrom(xml2,xml_text)
