--- a/NAMESPACE
+++ b/NAMESPACE
@@ -135,6 +135,7 @@ importFrom(Matrix,rowSums)
 importFrom(Matrix,sparseMatrix)
 importFrom(R6,R6Class)
 importFrom(data.table,copy)
+importFrom(data.table,fwrite)
 importFrom(graphics,dotchart)
 importFrom(graphics,grid)
 importFrom(graphics,par)
@@ -143,6 +144,7 @@ importFrom(graphics,points)
 importFrom(graphics,rect)
 importFrom(graphics,text)
 importFrom(jsonlite,fromJSON)
+importFrom(jsonlite,toJSON)
 importFrom(pbapply,pblapply)
 importFrom(slam,as.simple_triplet_matrix)
 importFrom(slam,col_sums)
