--- a/NAMESPACE
+++ b/NAMESPACE
@@ -177,9 +177,13 @@ importFrom(utils,txtProgressBar)
 importFrom(utils,untar)
 importFrom(utils,write.csv)
 importFrom(xml2,"xml_attr<-")
+importFrom(xml2,"xml_text<-")
 importFrom(xml2,read_html)
 importFrom(xml2,xml_attr)
+importFrom(xml2,xml_attrs)
 importFrom(xml2,xml_find_all)
+importFrom(xml2,xml_find_first)
 importFrom(xml2,xml_name)
 importFrom(xml2,xml_parent)
+importFrom(xml2,xml_remove)
 importFrom(xml2,xml_text)
