--- a/NAMESPACE
+++ b/NAMESPACE
@@ -135,6 +135,7 @@ importFrom(Matrix,rowSums)
 importFrom(Matrix,sparseMatrix)
 importFrom(R6,R6Class)
 importFrom(data.table,copy)
+importFrom(data.table,fread)
 importFrom(data.table,fwrite)
 importFrom(graphics,dotchart)
 importFrom(graphics,grid)
